latest version of multiple Rmd files and their HTML printouts.

--- a/beleyur_et_al_silk_analyses.Rmd
+++ b/beleyur_et_al_silk_analyses.Rmd
@@ -127,6 +127,12 @@ mgplt7<- ggplot(mgwd7,aes(x=as.factor(day),y=meanL,shape=as.factor(groupsize),gr
 
 ggsave('total_silk_length_all_7days.png')
 
+# make *all* data web-silk plot on request of reviewers
+mgplt.all<- ggplot(mgwd,aes(x=as.factor(day),y=meanL,shape=as.factor(groupsize),group=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanL-sdL, ymax=meanL+sdL,width=0.9),size=1.3,position=pd) +scale_shape_manual(values=c(15,16,17,18))+ xlab('Days') + ylab('Length of silk (metres)') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=15))  ; mgplt.all
+
+ggsave('total_silk_length_alldays.png')
+
+
 
 
 
@@ -238,10 +244,15 @@ mgpc<-merge(mnpc,sdpc); mgpc<-mgpc[order(mgpc[,1],mgpc[,2]),]
 
 #### figure  4 
 pd <- position_dodge(width = 0.8)
+
 mgpc1<-subset(mgpc,day<9)
 mgpltpc<- ggplot(mgpc1,aes(x=as.factor(day),y=meanPC,shape=as.factor(groupsize),group=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanPC-sdPC, ymax=meanPC+sdPC,shape=as.factor(mgpc1$groupsize),width=0.9),size=1.3,position=pd) + xlab('Days') + ylab('Per-capita silk investment (metres)')+scale_shape_manual(values=c(15,16,17,18))+geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=20))  ; mgpltpc
 ggsave('per_capita_all_10days.png')
 
+# per-capita all days data
+
+mgpltpc.all<- ggplot(mgpc,aes(x=as.factor(day),y=meanPC,shape=as.factor(groupsize),group=as.factor(groupsize))) +geom_pointrange(aes(ymin=meanPC-sdPC, ymax=meanPC+sdPC,shape=as.factor(groupsize),width=0.9),size=1.3,position=pd) + xlab('Days') + ylab('Per-capita silk investment (metres)')+scale_shape_manual(values=c(15,16,17,18))+geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=20))  ; mgpltpc.all
+ggsave('per_capita_all.png')
 
 
 ### figure 4 -- within 7 days
@@ -260,7 +271,7 @@ ggsave('per_capita_all_7days.png')
 ### Running the nparLD analysis
 The nparLD analysis must be run with an older version of R (here I'm using 2.15.3). To do so, 
 I'm using the Renv (https://github.com/viking/Renv) and R-build https://github.com/viking/R-build
-projects. For a comparison of how to do this interactively - please see the topology analysis file. 
+projects. For a description of how to do this - please see the topology analysis file. 
 
 ```{r}
 # this activates Renv. Make sure the default R version is set to 2.15.3
@@ -296,16 +307,8 @@ table(wd1$groupsize)
 
 ### The R packages and R version required to run this analysis 
 
-```{r}
-# code from 
-# https://www.r-bloggers.com/list-of-user-installed-r-packages-and-their-versions/
+```{r workenv}
+sessionInfo()
 
-ip <- as.data.frame(installed.packages()[,c(1,3:4)])
-rownames(ip) <- NULL
-ip <- ip[is.na(ip$Priority),1:2,drop=FALSE]
-print(ip, row.names=FALSE)
-
-## The R version used to run this analysis 
-print(R.version)
 ```
 
