--- a/beleyur_et_al_topology_analyses.Rmd
+++ b/beleyur_et_al_topology_analyses.Rmd
@@ -169,14 +169,14 @@ poresize_mean_sd<-poresize_mean_sd[order(poresize_mean_sd[,1],poresize_mean_sd[,
 
 #
 pd <- position_dodge(width = 0.8)
-poresize_data<-subset(poresize_mean_sd,Days<8)
+poresize_data<-subset(poresize_mean_sd,Days<11)
 
 
 mgplt<- ggplot(poresize_data,aes(x=as.factor(Days),
                                  y=mean_poresize,
-                                 shape=as.factor(group_size),
-                                 group=as.factor(group_size)))+geom_pointrange(aes(ymin=mean_poresize-sd_poresize, ymax=mean_poresize+sd_poresize,width=0.9),size=1.3,position=pd) +scale_shape_manual(values=c(15,16,17,18))+ xlab('Days') + ylab('Pore size (a.u.)') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=15));
+                                 shape=as.factor(group_size),                                 group=as.factor(group_size)))+geom_pointrange(aes(ymin=mean_poresize-sd_poresize, ymax=mean_poresize+sd_poresize,width=0.9),size=1.3,position=pd) +scale_shape_manual(values=c(15,16,17,18))+ xlab('Days') + ylab('Pore size (a.u.)') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=20))+theme_classic()+ scale_y_log10(breaks=seq(100,1000,100));
 mgplt
+ggsave('poresize_alldays.jpg',dpi=1000,height=4.25,width=7.29)
 
 
 
@@ -193,16 +193,16 @@ coodnum_mean_sd<-merge(coodnum_mean,coodnum_sd);
 coodnum_mean_sd<-coodnum_mean_sd[order(coodnum_mean_sd[,1],coodnum_mean_sd[,2]),]
 
 #
-coodnum_data<-subset(coodnum_mean_sd,Days<8)
+coodnum_data<-subset(coodnum_mean_sd,Days<11)
 
 
 mgplt2<- ggplot(coodnum_data,aes(x=as.factor(Days),
                                  y=mean_coodnum,
                                  shape=as.factor(group_size),
-                                 group=as.factor(group_size)))+geom_pointrange(aes(ymin=mean_coodnum-sd_coodnum, ymax=mean_coodnum+sd_coodnum,width=0.9),size=1.3,position=pd) +scale_shape_manual(values=c(15,16,17,18))+ xlab('Days') + ylab('Coordination nummber') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=15))+ylim(1,4);
+                                group=as.factor(group_size)))+geom_pointrange(aes(ymin=mean_coodnum-sd_coodnum, ymax=mean_coodnum+sd_coodnum,width=0.9),size=1.3,position=pd) +scale_shape_manual(values=c(15,16,17,18))+ xlab('Days') + ylab('Coordination nummber') +geom_line(lwd=1,position=pd)+labs(shape = "Group Size")+ theme(text = element_text(size=20))+ylim(1,4)+theme_classic();
 mgplt2
 
-
+ggsave('coodnum_alldays.jpg',dpi=1000,height=4.25,width=7.29)
 
 ```
 
